[gd_scene load_steps=2 format=3 uid="uid://0ltn3h7850rm"]

[ext_resource type="Script" path="res://dialogue/NameInputDialog.gd" id="1_vfop3"]

[node name="NameInputDialog" type="AcceptDialog"]
title = "What is your name?"
size = Vector2i(250, 100)
min_size = Vector2i(250, 100)
ok_button_text = "Accept"
script = ExtResource("1_vfop3")

[node name="NameEdit" type="LineEdit" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 242.0
offset_bottom = 50.0
size_flags_horizontal = 3
placeholder_text = "Steebo"
alignment = 1
max_length = 16
expand_to_text_length = true
clear_button_enabled = true

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
